# text-normalizer

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/text_normalizer/: __init__.py
tests/: test_cleaning.py  test_input_types.py
text_normalizer/src/: text_normalizer.py
