[project]
name = "text-normalizer"
version = "0.0.0"
authors = [
  { name="Call Simulator Labs", email="labs@callsimulator.com" },
]
description = "Tool for cleaning and normalizing text for speech related NLP tasks"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8, <4.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Operating System :: OS Independent"
  ]
keywords = "text-normalization text-cleaning callsimulator"

[project.urls]
"Homepage" = "https://github.com/NewSciTLH/text-normalizer"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "text-normalizer"
version = "0.0.0"
description = "Tool for cleaning and normalizing text for speech related NLP tasks"
authors = ["Call Simulator Labs <labs@callsimulator.com>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
pandas = "^1.4.3"

[tool.pytest.ini_options]
minversion = "7.1"
testpaths = ["tests"]
